# PythonProject

./: .coverage  .flake8  .gitignore  README.md  main.py  pyproject.toml
data/: operations.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_mask_py.html  z_a44f0ac069e85531_test_proccessing_py.html  z_a44f0ac069e85531_test_widget_py.html
src/: decorators.py  external_api.py  generators.py  masks.py  process_bank.py  processing.py  processing_bank.py  utils.py  utils_csv_xlsx.py  widget.py
test/: test_for_main.py
test_1/: pyvenv.cfg
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_mask.py  test_proccessing.py  test_widget.py
